# Freakals-Site

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  flake.nix  pyproject.toml
scripts/: entrypoint.sh  production_data.py
src/: manage.py
src/core/utils/: collections.py  cryptography.py  misc.py  settings.py  types.py
src/project/: urls.py
src/project/scraping/: apps.py  models.py
src/project/scraping/migrations/: 0001_initial.py  0002_cardprice.py  0003_alter_cardprice_table.py
src/project/settings/: __init__.py  base.py  docker.py  envvars.py  logging.py
src/project/settings/templates/: settings.dev.py
