[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Drew-Meseck <drewhmeseck@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "project" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=5.2.5,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
django-filter = ">=25.1,<26.0"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pre-commit = "^4.3.0"
colorlog = "^6.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
